--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,33 @@
-version: "2.2"
-
+version: '3.8'
 services:
-  mysql:
-    image: mysql:5.7
+  web:
+    image: petclinic:v2 
     ports:
-      - "3306:3306"
+      - 8000:8080
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
-    volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-  postgres:
+      - POSTGRES_URL="jdbc:postgresql://postgresql:5432/petclinic"
+      - JAVA_TOOL_OPTIONS="-Xms256MB-Xmx512MB"
+    links:
+      - postgresql
+    depends_on:
+      - postgresql
+    networks:
+      - app-net
+  postgresql:
     image: postgres:14.1
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=petclinic
       - POSTGRES_USER=petclinic
+      - POSTGRES_PASSWORD=petclinic
       - POSTGRES_DB=petclinic
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - app-net 
+volumes:
+  postgres-data:
+networks:
+  app-net:
+    name: postgres-net 
+    external: true 
