--- a/pipeline-configuration/Jenkinsfile
+++ b/pipeline-configuration/Jenkinsfile
@@ -1,4 +1,13 @@
-
-  build()
-  dockerBuild()  
-
+pipeline {
+    agent {label 'docker-agents'}  
+     
+stages {
+    
+    stage(CI') { 
+           steps {
+             build()
+             dockerBuild()
+           }
+    }    
+}   
+}
