--- a/pipeline-configuration/Jenkinsfile
+++ b/pipeline-configuration/Jenkinsfile
@@ -5,7 +5,7 @@ stages {
     
     stage('CI') { 
            steps {
-             build
+             Maven build
              dockerBuild
            }
     }    
