--- a/pipeline-configuration/Jenkinsfile
+++ b/pipeline-configuration/Jenkinsfile
@@ -6,7 +6,8 @@ stages {
     stage('CI') { 
            steps {
              Maven build
-             dockerBuild
+             Build docker image
+             Docker deploy
            }
     }    
 }   
